--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<app-home></app-home>
+<div class="content">
+  <div class="content-header">
+    <app-header></app-header>
+  </div>
+  <div class="content-outlet">
+    <router-outlet></router-outlet>
+  </div>
+</div>
