tabs bar template

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,3 +1,8 @@
-<h2>header works!</h2>
-
-<app-nav-bar></app-nav-bar>
+<div class="header">
+  <div class="header-content content">
+    <h1>header works!</h1>
+  </div>
+  <div class="navbar">
+    <app-tabs-bar></app-tabs-bar>
+  </div>
+</div>
