inserindo mais componentes

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -3,6 +3,6 @@
     <h1>header works!</h1>
   </div>
   <div class="navbar">
-    <app-tabs-bar></app-tabs-bar>
+    <app-tabs-bar [tabInputList]="tabInput"></app-tabs-bar>
   </div>
 </div>
