--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="header-content content">
     <h1>header works!</h1>
   </div>
-  <div class="navbar">
+  <div class="tabsbar">
     <app-tabs-bar [tabInputList]="tabInput"></app-tabs-bar>
   </div>
 </div>
