--- a/src/app/shared/components/custom-input/custom-input.component.html
+++ b/src/app/shared/components/custom-input/custom-input.component.html
@@ -4,6 +4,7 @@
   </div>
   <div class="content-input">
     <input
+      class="input"
       [id]="label"
       [type]="type"
       [placeholder]="placeholder"
