--- a/src/app/shared/components/custom-input/custom-input.component.html
+++ b/src/app/shared/components/custom-input/custom-input.component.html
@@ -2,9 +2,9 @@
   <div class="content-label">
     <label>{{ label }}</label>
   </div>
-  <div class="content-input">
+  <div class="content-custom">
     <input
-      class="input"
+      class="custom-input"
       [id]="label"
       [type]="type"
       [placeholder]="placeholder"
