--- a/src/app/pages/components/contact/contact-form/contact-form.component.html
+++ b/src/app/pages/components/contact/contact-form/contact-form.component.html
@@ -4,8 +4,8 @@
   </div>
 
   <div class="content-body">
-    <form>
-      <div class="body-conteudo" *ngFor="let input of CInput">
+    <form class="body-form">
+      <div class="form-conteudo" *ngFor="let input of CInput">
         <app-custom-input
           [label]="input.label"
           [type]="input.type"
